Added interests and hobbies section to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-My name is Martin Stanchev, student at FMI Plovdiv
+My name is Martin Stanchev, student at FMI Plovdiv.
+
+I like comedy, playing the guitar and working with JavaScript.
