Added my channel section to index.html

--- a/index.html
+++ b/index.html
@@ -3,3 +3,5 @@ My name is Martin Stanchev, student at FMI Plovdiv.
 I like comedy, playing the guitar and working with JavaScript.
 
 https://www.youtube.com/watch?v=DHjqpvDnNGE&ab_channel=Fireship
+
+My channel would be focused on everything I love doing - fitness, music, progrogramming cooking.
