Added income section to index.html

--- a/index.html
+++ b/index.html
@@ -5,3 +5,5 @@ I like comedy, playing the guitar and working with JavaScript.
 https://www.youtube.com/watch?v=DHjqpvDnNGE&ab_channel=Fireship
 
 My channel would be focused on everything I love doing - fitness, music, progrogramming cooking.
+
+If my channel is successful I'd be more than happy to make 5k a month.
